--- a/requirements.txt
+++ b/requirements.txt
@@ -1,100 +1,103 @@
-anyio @ file:///C:/ci/anyio_1644481856696/work/dist
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644569876605/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-attrs @ file:///C:/b/abs_09s3y775ra/croot/attrs_1668696195628/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650293028159/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
-certifi @ file:///C:/b/abs_ac29jvt43w/croot/certifi_1665076682579/work/certifi
-cffi @ file:///C:/b/abs_49n3v2hyhr/croot/cffi_1670423218144/work
-click @ file:///C:/ci/click_1646056762388/work
-colorama @ file:///C:/Windows/TEMP/abs_9439aeb1-0254-449a-96f7-33ab5eb17fc8apleb4yn/croots/recipe/colorama_1657009099097/work
-contourpy @ file:///C:/b/abs_d5rpy288vc/croots/recipe/contourpy_1663827418189/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///C:/ci_310/debugpy_1642079916595/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints @ file:///C:/ci/entrypoints_1649926676279/work
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastjsonschema @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_ebruxzvd08/croots/recipe/python-fastjsonschema_1661376484940/work
-Flask @ file:///C:/ci/flask_1658860024433/work
-flit_core @ file:///opt/conda/conda-bld/flit-core_1644941570762/work/source/flit_core
-fonttools==4.25.0
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-imbalanced-learn @ file:///home/conda/feedstock_root/build_artifacts/imbalanced-learn_1652728311148/work
-ipykernel @ file:///C:/b/abs_21ykzkm7y_/croots/recipe/ipykernel_1662361803478/work
-ipython @ file:///C:/b/abs_84shimxwmz/croot/ipython_1668088123494/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-itsdangerous @ file:///tmp/build/80754af9/itsdangerous_1621432558163/work
-jedi @ file:///C:/ci/jedi_1644315428305/work
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-joblib @ file:///C:/b/abs_e60_bwl1v6/croot/joblib_1666298845728/work
-jsonschema @ file:///C:/b/abs_59eyhnbyej/croots/recipe/jsonschema_1663375476535/work
-jupyter-server @ file:///C:/Windows/TEMP/abs_d3c42c59-765d-4f9b-9fa3-ad5b1369485611i_yual/croots/recipe/jupyter_server_1658754493238/work
-jupyter_client @ file:///C:/b/abs_cbnezz4zg0/croot/jupyter_client_1669040266195/work
-jupyter_core @ file:///C:/b/abs_b8r5lb5eus/croot/jupyter_core_1668084445779/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-kiwisolver @ file:///C:/ci/kiwisolver_1653292359073/work
-lxml @ file:///C:/ci/lxml_1657527492694/work
-MarkupSafe @ file:///C:/ci/markupsafe_1654508036328/work
-matplotlib @ file:///C:/b/abs_03z_dj2gty/croot/matplotlib-suite_1670466145509/work
-matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661934094726/work
-mistune @ file:///C:/ci_310/mistune_1642084168466/work
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci_310/mkl_random_1643050563308/work
-mkl-service==2.4.0
-munkres==1.1.4
-nbclassic @ file:///C:/b/abs_26e3fkk516/croot/nbclassic_1668174974037/work
-nbclient @ file:///C:/ci/nbclient_1650308592199/work
-nbconvert @ file:///C:/b/abs_4av3q4okro/croot/nbconvert_1668450658054/work
-nbformat @ file:///C:/b/abs_85_3g7dkt4/croot/nbformat_1670352343720/work
-nest-asyncio @ file:///C:/ci/nest-asyncio_1649848132512/work
-notebook @ file:///C:/b/abs_ca13hqvuzw/croot/notebook_1668179888546/work
-notebook_shim @ file:///C:/b/abs_ebfczttg6x/croot/notebook-shim_1668160590914/work
-numexpr @ file:///C:/b/abs_a7kbak88hk/croot/numexpr_1668713882979/work
-numpy @ file:///C:/b/abs_5ct9ex77k9/croot/numpy_and_numpy_base_1668593740598/work
-packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
-pandas @ file:///C:/b/abs_c6fuezktfm/croot/pandas_1670425103552/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==9.2.0
-ply==3.11
-prometheus-client @ file:///C:/Windows/TEMP/abs_ab9nx8qb08/croots/recipe/prometheus_client_1659455104602/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1633440160888/work
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-Pygments @ file:///opt/conda/conda-bld/pygments_1644249106324/work
-pyparsing @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_7f_7lba6rl/croots/recipe/pyparsing_1661452540662/work
-PyQt5==5.15.7
-PyQt5-sip @ file:///C:/Windows/Temp/abs_d7gmd2jg8i/croots/recipe/pyqt-split_1659273064801/work/pyqt_sip
-pyrsistent @ file:///C:/ci_310/pyrsistent_1642117077485/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///C:/Windows/TEMP/abs_90eacd4e-8eff-491e-b26e-f707eba2cbe1ujvbhqz1/croots/recipe/pytz_1654762631027/work
-pywin32==305.1
-pywinpty @ file:///C:/ci_310/pywinpty_1644230983541/work/target/wheels/pywinpty-2.0.2-cp310-none-win_amd64.whl
-pyzmq @ file:///C:/ci/pyzmq_1657616000714/work
-scikit-learn @ file:///C:/b/abs_eezai1guz5/croot/scikit-learn_1667587552067/work
-scipy==1.9.3
-seaborn @ file:///C:/b/abs_64ypwhwrqe/croot/seaborn_1669625732106/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-sip @ file:///C:/Windows/Temp/abs_b8fxd17m2u/croots/recipe/sip_1659012372737/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
-sniffio @ file:///C:/ci_310/sniffio_1642092172680/work
-soupsieve @ file:///C:/b/abs_fasraqxhlv/croot/soupsieve_1666296394662/work
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
-terminado @ file:///C:/ci/terminado_1644312135040/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tinycss2 @ file:///C:/b/abs_52w5vfuaax/croot/tinycss2_1668168823131/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tornado @ file:///C:/ci/tornado_1662476985533/work
-traitlets @ file:///tmp/build/80754af9/traitlets_1636710298902/work
-typing_extensions @ file:///C:/b/abs_89eui86zuq/croot/typing_extensions_1669923792806/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client @ file:///C:/ci_310/websocket-client_1642093970919/work
-Werkzeug @ file:///opt/conda/conda-bld/werkzeug_1645628268370/work
-wincertstore==0.2
+anyio == 3.5.0
+argon2-cffi  == 21.3.0
+argon2-cffi-bindings == 21.2.0
+asttokens == 2.0.5
+attrs   ==   22.1.0
+backcall     ==    0.2.0
+beautifulsoup4  ==  4.11.1
+bleach ==   4.1.0
+Bottleneck   ==  1.3.5
+certifi      ==     2022.9.24
+cffi    ==     1.15.1
+click ==   8.0.4
+colorama  ==    0.4.5
+contourpy   ==   1.0.5
+cycler  ==   0.11.0
+debugpy   ==  1.5.1
+decorator   ==   5.1.1
+defusedxml    ==  0.7.1
+entrypoints   ==  0.4
+executing   == 0.8.3
+fastjsonschema  ==2.16.2
+Flask   ==    2.1.3
+flit_core   ==   3.6.0
+fonttools ==   4.25.0
+idna    ==  3.4
+imbalanced-learn   ==  0.9.1
+ipykernel  ==   6.15.2
+ipython  ==   8.6.0
+ipython-genutils   ==  0.2.0
+itsdangerous   ==  2.0.1
+jedi   ==    0.18.1
+Jinja2  ==  3.1.2
+joblib  ==  1.1.1
+jsonschema ==  4.16.0
+jupyter_client  ==  7.4.7
+jupyter_core==  4.11.2
+jupyter-server == 1.18.1
+jupyterlab-pygments == 0.1.2
+kiwisolver   == 1.4.2
+lxml       ==   4.9.1
+MarkupSafe ==  2.1.1
+matplotlib   ==  3.6.2
+matplotlib-inline ==   0.1.6
+mistune    ==    0.8.4
+mkl-fft   ==      1.3.1
+mkl-random ==  1.2.2
+mkl-service   ==  2.4.0
+munkres    ==   1.1.4
+nbclassic  ==  0.4.8
+nbclient  ==   0.5.13
+nbconvert  ==  6.5.4
+nbformat     ==  5.7.0
+nest-asyncio == 1.5.5
+notebook    == 6.5.2
+notebook_shim    ==0.2.2
+numexpr   ==   2.8.4
+numpy  ==      1.23.4
+packaging ==  21.3
+pandas    == 1.5.2
+pandocfilters  ==  1.5.0
+parso   ==  0.8.3
+pickleshare  ==  0.7.5
+Pillow     ==   9.2.0
+pip    ==    22.2.2
+ply   ==    3.11
+prometheus-client  ==  0.14.1
+prompt-toolkit     ==  3.0.20
+psutil ==   5.9.0
+pure-eval == 0.2.2
+pycparser  == 2.21
+Pygments     ==   2.11.2
+pyparsing  ==    3.0.9
+PyQt5    == 5.15.7
+PyQt5-sip  == 12.11.0
+pyrsistent  ==  0.18.0
+python-dateutil   ==   2.8.2
+pytz    ==   2022.1
+pywin32    ==   305.1
+pywinpty   ==   2.0.2
+pyzmq    ==   23.2.0
+scikit-learn ==  1.1.3
+scipy     == 1.9.3
+seaborn  == 0.12.1
+Send2Trash  == 1.8.0
+setuptools  ==   65.5.0
+sip   ==   6.6.2
+six   ==   1.16.0
+sniffio   ==  1.2.0
+soupsieve  == 2.3.2.post1
+stack-data == 0.2.0
+terminado  ==   0.13.1
+threadpoolctl  ==  2.2.0
+tinycss2  ==   1.2.1
+toml      ==   0.10.2
+tornado   ==  6.2
+traitlets  ==  5.1.1
+typing_extensions ==4.4.0
+wcwidth    == 0.2.5
+webencodings == 0.5.1
+websocket-client   ==  0.58.0
+Werkzeug  ==  2.0.3
+wheel  ==     0.37.1
+wincertstore   ==   0.2
