--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ fastjsonschema  ==2.16.2
 Flask   ==    2.1.3
 flit_core   ==   3.6.0
 fonttools ==   4.25.0
+gunicorn==20.1.0
 idna    ==  3.4
 imbalanced-learn   ==  0.9.1
 ipykernel  ==   6.15.2
